--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,68 @@
-{% extends "base.html" %}
-
-{% block content %}
-{{super()}}
- <h1> Вот самая красивая машина {{name}}  </h1>
- <img src={{foto}}>
-
-{% endblock  %}
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet", href="style.css">
+    <title>WrendliVibe</title>
+</head>
+<body>
+    <div class="main" style="width: max-content; height: max-content;">
+        <div id="sign" style="padding-bottom: 50px;">
+            WrendliVibe
+        </div>
+        <div id="info" style="padding: auto;">
+            <h1 style="text-align: left; padding-left: 20px; padding-top: 10px; font-size: 75px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; text-shadow: grey;">Инфа</h1>
+            <div id="text" style="text-align: left;padding-right: 20px ; padding-left: 100px; font-size: x-large; font-family:Arial, Helvetica, sans-serif;">
+                Инфа бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла бла<a href="https://discord.gg/2kZZqMkGCB">ссылке</a>
+                <div id="gameplay" style="font-size:xx-large; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
+                    <h2>
+                        Геймплей
+                    </h2>
+                    <li style="font-size: 50px;">
+                        бла
+                    </li>
+                    <li style="font-size: 50px;">
+                        бла
+                    </li>
+                    <li style="font-size: 50px;">
+                        бла
+                    </li>
+                </div>
+                <div id="rules">
+                    <h2 style="font-size: 50px;">Правила сервера</h2>
+                    <ol style="font-size: 50px; margin-left: 10px;">
+                        <li>
+                            бла
+                        </li>
+                        <li>
+                            бла
+                        </li>
+                        <li>
+                            бла
+                        </li>
+                    </ol>
+                </div>
+            </div>
+            <div>
+                <video width="1000" height="500" controls style="padding-bottom: 50px; padding-top: 50px; position: relative;">
+                    <source src="https://www.youtube.com/watch?v=fWEYrf8lytU&ab_channel=Scammers", type="webm">
+                </video>
+            </div>
+            <div style="background-color: rgb(164, 164, 164); padding-bottom: 300px;">
+                
+            </div>
+        </div>
+            <footer style="background-color: rgb(56, 255, 185);padding-bottom: 5px; font-size: x-large; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; position: relative; text-align: left ; padding-left: 50px; padding-top: 20px; margin: auto;">
+                <ul>
+                    <li>
+                        Автор - <a href="">Apelsin4ik_</a>
+                    </li>
+                    <li>
+                        Код <a href="">сайта</a>
+                    </li>
+                </ul>
+            </footer>
+        
+    </div>
+</body>
+</html>
